--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <!-- Replace below lines with your own intro or message -->
         HELLO!<br>
         MY NAME<br>
-        IS <!-- Your Name Here --><br>
-        AND<br>
-        THIS IS<br>
-        MY MINIMALISTIC <br>
+        IS JOHN DOE<!-- Your Name Here --><br>
+        AND THIS<br>
+        IS MY<br>
+        MINIMAL<br>
         WEBSITE
     </div>
 
@@ -53,11 +53,10 @@
         <a href="<!-- Your Github URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/github.png" alt="Github"></a>
         <a href="<!-- Your LinkedIn URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/linkedin.png" alt="LinkedIn"></a>
         <a href="<!-- Your Discord URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/discord.png" alt="Discord"></a>
-        <a href="<!-- Your Personal Blog or Website URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/website.png" alt="Website"></a>
+        <a href="<!-- Your Personal Blog or Website URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/heart.png" alt="Website"></a>
         <a href="<!-- Your Spotify URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/spotify.png" alt="Spotify"></a>
         <a href="<!-- Your Instagram URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/instagram.png" alt="Instagram"></a>
         <a href="mailto:<!-- Your Email Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/mail.png" alt="Mail"></a>
-        <a href="<!-- Your Other URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/other.png" alt="Other"></a>
     </div>
 
 </body>
