update spacing and remove icons

--- a/index.html
+++ b/index.html
@@ -1,63 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Page Title -->
-    <title><!-- Your Name Here --></title>
-
-    <!-- Description of the page for search engines -->
-    <meta name="description" content="<!-- Your Description Here -->">
-
-    <!-- Keywords for search engines -->
-    <meta name="keywords" content="<!-- Your Keywords Here -->">
-
-    <!-- Page author -->
-    <meta name="author" content="<!-- Your Name Here -->">
-
-    <!-- Instructions for search engines on how to index the page -->
+    <title>Votre Nom Ici</title>
+    <meta name="description" content="Votre Description Ici">
+    <meta name="keywords" content="Vos Mots-Clés Ici">
+    <meta name="author" content="Votre Nom Ici">
     <meta name="robots" content="index, follow">
 
-    <!-- Open Graph tags for sharing on platforms like Facebook -->
-    <meta property="og:title" content="<!-- OG Title Here -->">
-    <meta property="og:description" content="<!-- OG Description Here -->">
-    <meta property="og:image" content="<!-- OG Image Path Here -->">
-    <meta property="og:url" content="<!-- Your Website URL Here -->">
+    <meta property="og:title" content="Titre OG Ici">
+    <meta property="og:description" content="Description OG Ici">
+    <meta property="og:image" content="Chemin Image OG Ici">
+    <meta property="og:url" content="URL de Votre Site Web Ici">
 
-    <!-- Link to the favicon -->
     <link rel="icon" href="icons/favicon.png" type="image/x-icon">
-
-    <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Link to Google Fonts for the Roboto font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Roboto+Condensed:wght@300&display=swap">
 </head>
 <body>
-    <!-- Main text content -->
     <div class="main-text">
-        <!-- Replace below lines with your own intro or message -->
-        HELLO!<br>
-        MY NAME<br>
-        IS JOHN DOE<!-- Your Name Here --><br>
-        AND THIS<br>
-        IS MY<br>
-        MINIMAL<br>
-        WEBSITE
+        BONJOUR!<br>
+        JE M'APPELLE<br>
+        JOHN DOE<br>
+        ET CECI<br>
+        EST MON<br>
+        SITE WEB<br>
+        MINIMALISTE
     </div>
 
-    <!-- Social media icons -->
     <div class="social-icons">
-        <!-- Replace href values below with your own social media links -->
-        <a href="<!-- Your Github URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/github.png" alt="Github"></a>
-        <a href="<!-- Your LinkedIn URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/linkedin.png" alt="LinkedIn"></a>
-        <a href="<!-- Your Discord URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/discord.png" alt="Discord"></a>
-        <a href="<!-- Your Personal Blog or Website URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/heart.png" alt="Website"></a>
-        <a href="<!-- Your Spotify URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/spotify.png" alt="Spotify"></a>
-        <a href="<!-- Your Instagram URL Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/instagram.png" alt="Instagram"></a>
-        <a href="mailto:<!-- Your Email Here -->" target="_blank" rel="noopener noreferrer"><img src="icons/mail.png" alt="Mail"></a>
+        <!-- Icônes remplacées par du texte -->
+        <a href="Votre URL Github Ici" target="_blank" rel="noopener noreferrer">Github</a>
+        <a href="Votre URL LinkedIn Ici" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a href="Votre URL Discord Ici" target="_blank" rel="noopener noreferrer">Discord</a>
+        <a href="Votre Blog Personnel ou URL du Site Web Ici" target="_blank" rel="noopener noreferrer">Site Web</a>
+        <a href="Votre URL Spotify Ici" target="_blank" rel="noopener noreferrer">Spotify</a>
+        <!-- Logo Instagram remplacé par du texte -->
+        <a href="Votre URL Instagram Ici" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="mailto:Votre Email Ici" target="_blank" rel="noopener noreferrer">Mail</a>
     </div>
-
 </body>
 </html>
